intTests/test_type_errors/err045.log.good
Loading file "err045.saw"
Type errors:
  err045.saw:2:26-2:27: Error: Type mismatch.
    Expected: String
    Found:    Int

  err045.saw:2:17-2:23: Note: The type String arises from this type annotation
  err045.saw:2:26-2:27: Note: The type Int arises from the type of this term


FAILED
