intTests/test_type_errors/err045.saw
// You'd expect this to be a parse error, wouldn't you...
let (f : Int) : String = 3;
